--- a/index.html
+++ b/index.html
@@ -50,15 +50,13 @@
                     </div>
                 </nav>
                 <div class="header_content position-absolute top-50 start-50 translate-middle align-center ">
-                    <div class="w-100">
+                    <div class="w-100 h-100 ">
                         <h1 class="text-white fs-5">The <strong>Hub</strong> of <strong>Tutorials</strong></h1>
                         <div class="d-flex justify-content-center mt-3">
                             <button class="btn btn-primary me-3">Learn More</button>
                             <button class="btn btn-outline-primary ms-3 text-white">See Courses</button>
                         </div>
                     </div>
-                  
-
                 </div>
             </div>
         </div>
