--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- ************************************************Header************************************************ -->
     <header class="position-relative">
         <div class="overlay position-absolute top-0 start-0 bottom-0 end-0 bg-overlay">
             <div class="container">
@@ -62,8 +63,129 @@
         </div>
 
     </header>
+    <!-- ************************************************Cards************************************************ -->
+    <section>
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-lg-8 col-sm-12">
+                    <div>
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="./images/img_1.jpg" class="img-fluid " alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body ">
+                                        <a href="#" class="text-uppercase fw-bold fs-6">Tutorial</a>
+                                        <h5 class="card-title fs-4 mt-2">Learning React Native</h5>
+                                        <p class="card-text w-75 mt-3">This is a wider card with supporting text below
+                                            as a
+                                            natural lead-in to additional content. This content is a little bit longer.
+                                        </p>
+                                        <div class="icons mt-3">
+                                            <img src="./images/react.png" alt="" />
+                                            <img src="./images/js.png" alt="" />
+                                        </div>
+                                        <p class="card-text mt-3"><small class="text-muted fs-4 ">1hr 24m Advanced Jun
+                                                18, 2020</small>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="col-lg-4 col-sm-12  sideElements py-4">
+                    <div class="d-flex flex-column bg-white">
+                        <div class="g-0 d-flex justify-content-between align-items-center ">
+                            <div class="col-md-2 ">
+                                <img src="./images/img_1.jpg" class="" alt="...">
+                            </div>
+                            <div class="col-md-10">
+                                <div class=" ms-3">
+                                    <a href="#" class="text-uppercase fw-bold fs-6">Tutorial</a>
+                                    <h5 class=" fs-6 mt-2">Learning React Native</h5>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="g-0 d-flex justify-content-between align-items-center my-3">
+                            <div class="col-md-2">
+                                <img src="./images/img_1.jpg" class="" alt="...">
+                            </div>
+                            <div class="col-md-10">
+                                <div class=" ms-3">
+                                    <a href="#" class="text-uppercase fw-bold fs-6">Tutorial</a>
+                                    <h5 class=" fs-6 mt-2">Learning React Native</h5>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="g-0 d-flex justify-content-between align-items-center ">
+                            <div class="col-md-2">
+                                <img src="./images/img_1.jpg" class="" alt="...">
+                            </div>
+                            <div class="col-md-10">
+                                <div class=" ms-3">
+                                    <a href="#" class="text-uppercase fw-bold fs-6">Tutorial</a>
+                                    <h5 class=" fs-6 mt-2">Learning React Native</h5>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ************************************************Courses************************************************ -->
+    <div class="container mt-5 pt-3 Courses">
+        <p class="text-dark fw-bold fs-6 mb-0">TUTORIAL COURSES</p>
+        <h2 class="text-primary fw-bold ">Choose Course</h2>
+        <div class="items mt-4 d-flex justify-content-evenly align-items-center flex-wrap">
+            <div class="item p-4 d-flex justify-content-center align-items-center flex-column">
+                <div>
+                    <img src="./images/Illustrator.png" alt="" />
+                </div>
+                <p class="mt-3">Illustrator</p>
+            </div>
+            <div class="item p-4 d-flex justify-content-center align-items-center flex-column">
+                <div>
+                    <img src="./images/photoshop.png" alt="" />
+                </div>
+                <p class="pt-3">Photoshop</p>
+            </div>
+            <div class="item p-4 d-flex justify-content-center align-items-center flex-column">
+                <div>
+                    <img src="./images/typescript.png" alt="" />
+                </div>
+                <p class="pt-3">Typescript</p>
+            </div>
+            <div class="item p-4 d-flex justify-content-center align-items-center flex-column">
+                <div>
+                    <img src="./images/node.js.png" alt="" />
+                </div>
+                <p class="pt-3">Node.js</p>
+            </div>
+            <div class="item p-4 d-flex justify-content-center align-items-center flex-column">
+                <div>
+                    <img src="./images/react.png" alt="" />
+                </div>
+                <p class="pt-3">React</p>
+            </div>
+            <div class="item p-4 d-flex justify-content-center align-items-center flex-column">
+                <div>
+                    <img src="./images/js.png" alt="" />
+                </div>
+                <p class="pt-3">JavaScript</p>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- ************************************************Courses************************************************ -->
 
 
 
