--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
                     <img src="./images/hero_bg2.jpg" class="d-block w-100" alt="...">
                     <div class="carouselContent d-flex flex-column align-center justify-content-center">
                         <button class="btn btn-success carouselButton fw-bold">Technology</button>
-                        <p>This Hub allows you to learn all the modern technology</p>
+                        <p> learn all the modern technology</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./images/hero_bg.jpg" class="d-block w-100" alt="...">
                     <div class="carouselContent d-flex flex-column align-center justify-content-center">
                         <button class="btn btn-danger carouselButton">New Ways</button>
-                        <p>Here You can learn by new ways to mainly understand</p>
+                        <p>Here  learn by new ways </p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./images/hero_bg3.jpg" class="d-block w-100" alt="...">
                     <div class="carouselContent d-flex flex-column align-center justify-content-center">
                         <button class="btn btn-warning carouselButton">Co-operation</button>
-                        <p>You will have a community instructors and colleges </p>
+                        <p> A community instructors and colleges </p>
                     </div>
                 </div>
             </div>
